--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,8 @@
-FROM node:18-alpine
+FROM node:18
 
 WORKDIR /app
-
-COPY package*.json ./
+COPY backend/package.json .
 RUN npm install
-
-COPY . .
-
-EXPOSE 8080
-CMD ["npm", "start"]
+COPY backend .
+EXPOSE 5000
+CMD ["npm","start"]
