--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2 - Serve Angular app
 FROM nginx:alpine
-COPY --from=build /app/dist/* /usr/share/nginx/html
+COPY --from=build /app/dist/ /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
